# TI_Basic

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
include/: ASTNode.hpp  BasicBlock.hpp  BasicBlockFormer.hpp  Driver.hh  IRGen.hpp  NodeVisitor.hpp  PostOrderWalkerHelper.hpp  SSAFormer.hpp  SymbolTable.hpp  TypeBuilder.hpp  llvmJit.hpp  variable.hpp
src/: ASTNode.cpp  BasicBlockFormer.cpp  Compiler.cpp  Grammer.l  Grammer.y  IRGen.cpp  Lexer.l  Parser.y  ParsingHandler.cpp  SSAFormer.cpp  SymbolTable.cpp  TypeBuilder.cpp  test.cpp
test/include/: AstTester.hpp  TestCode.hpp
test/src/: ASTTests.cpp  BBTests.cpp  CodeGenTest.cpp  TestCode.cpp  TestSetup.cpp  main.cpp
